--- a/pkg/delivery/rest/views/base.tmpl
+++ b/pkg/delivery/rest/views/base.tmpl
@@ -10,7 +10,7 @@
 </head>
 <body class="container">
     <div class="row justify-content-center">
-        <div class="col-8">
+        <div class="main-content col-8">
             {{block "content" .}}
                 placeholder
             {{end}}
