feat: readSubjects usecase can now return a single subject by ID or all subjects

--- a/pkg/delivery/rest/views/subject.tmpl
+++ b/pkg/delivery/rest/views/subject.tmpl
@@ -7,8 +7,8 @@
             {{block "unit-element" .}}
                 <li class="list-group-item d-flex flex-wrap">
                     <h5 class="mr-auto">{{.Name}}</h5>
-                    <button hx-get="/unit/{{.Id}}/edit" hx-swap="innerHTML" hx-target=".main-content" hx-push-url="true" class="px-10 mr-2 btn btn-lg btn-outline-primary">Edit</button>
-                    <button hx-delete="/unit/{{.Id}}" hx-confirm="Are you sure? Deleting a unit deletes all of its keywords as well. This cannot be undone." 
+                    <button hx-get="/unit/{{.ID}}/edit" hx-swap="innerHTML" hx-target=".main-content" hx-push-url="true" class="px-10 mr-2 btn btn-lg btn-outline-primary">Edit</button>
+                    <button hx-delete="/unit/{{.ID}}" hx-confirm="Are you sure? Deleting a unit deletes all of its keywords as well. This cannot be undone." 
                     class="px-10 mr-2 btn btn-lg btn-outline-danger">Delete</button>
                 </li>
             {{end}}
